--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               study multi media design at EK
               (formerly KEA) and I am currently in
               my third semester. I have been
-              working with design, in free time
+              working with design, in my free time
               and during my education since I was
               in HTX and graduated in 2021.
               Outside of my studies, I like to
@@ -156,13 +156,13 @@
             </h3>
             <p>
               I am well exercised in using
-              Illustrator, InDesign, Photoshop and
-              Premiere Pro, and a little bit of
-              After Effects. I am also very quick
-              at learning new programs and new
-              features when using these programs,
-              so I won’t have trouble with new
-              challenges.
+              Illustrator, InDesign, Photoshop,
+              Lightroom and Premiere Pro, and a
+              little bit of After Effects. I am
+              also very quick at learning new
+              programs and new features when using
+              these programs, so I won’t have
+              trouble with new challenges.
             </p>
           </div>
           <div class="line-text">
@@ -298,10 +298,22 @@
         <p>Telefon: <span>+4542241710</span></p>
       </div>
       <div class="contact-links">
-        <div><a href="">Linkedin</a></div>
-        <div><a href="">Jobindex</a></div>
+        <div>
+          <a
+            href="www.linkedin.com/in/asger-dokkedal-392551387"
+            >Linkedin</a
+          >
+        </div>
+        <div>
+          <a
+            href="https://www.figma.com/@asdo0001"
+            >Figma</a
+          >
+        </div>
         <div class="github">
-          <a href="">Github</a>
+          <a href="https://github.com/Dokkeboi"
+            >Github</a
+          >
         </div>
       </div>
     </section>
